--- a/src/app/components/list-user/list-user.component.html
+++ b/src/app/components/list-user/list-user.component.html
@@ -1,1 +1,40 @@
-<p>list-user works!</p>
+<div class="title-group">
+  <h1 class="mat-h1 text-center p-4">Users</h1>
+</div>
+
+<p *ngIf="userData.length <= 0" class="no-data">There is no users.</p>
+
+<div class="container" *ngIf="userData.length > 0">
+  <div class="mat-elevation-z8">
+    <table class="m-0 w-100"mat-table [dataSource]="dataSource">
+      <ng-container class="mr-2 ml-2 p-4" matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef> Id </th>
+        <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef> Name </th>
+        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="birthdate">
+        <th mat-header-cell *matHeaderCellDef> Birthdate </th>
+        <td mat-cell *matCellDef="let element"> {{element.birthdate}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="action">
+        <th mat-header-cell *matHeaderCellDef> Action </th>
+        <td mat-cell *matCellDef="let element; let i = index;">
+          <button mat-raised-button color="primary" class="push-right"
+                  [routerLink]="['/edit-user/', element.id]">Edit</button>
+          <button mat-raised-button color="accent" (click)="deleteUser(i, element)">Delete</button>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+
+    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+  </div>
+</div>
