--- a/src/app/components/edit-user/edit-user.component.html
+++ b/src/app/components/edit-user/edit-user.component.html
@@ -1,1 +1,31 @@
-<p>edit-user works!</p>
+<div class="title-group">
+  <h1 class="mat-h1">Edit user</h1>
+  <mat-divider fxFlex="1 0"></mat-divider>
+</div>
+<div class="inner-wrapper">
+  <form [formGroup]="userForm" (ngSubmit)="updateUserForm()">
+    <mat-card>
+           <mat-form-field class="example-full-width">
+          <input matInput placeholder="Name" formControlName="name">
+          <mat-error *ngIf="handleError('name', 'required')">
+            You must provide a<strong>user name</strong>
+          </mat-error>
+        </mat-form-field>
+
+        <mat-form-field>
+          <input matInput readonly [matDatepicker]="picker" placeholder="Date of birth" formControlName="birthdate"
+                 (dateChange)="formatDate($event)">
+          <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+          <mat-datepicker #picker></mat-datepicker>
+          <mat-error *ngIf="handleError('birthdate', 'required')">
+            Date of birth is required
+          </mat-error>
+        </mat-form-field>
+      <div class="full-wrapper button-wrapper">
+        <div class="button-wrapper">
+          <button mat-flat-button color="primary">Update</button>
+        </div>
+      </div>
+    </mat-card>
+  </form>
+</div>
