--- a/src/app/components/list-user/list-user.component.html
+++ b/src/app/components/list-user/list-user.component.html
@@ -23,11 +23,11 @@
       </ng-container>
 
       <ng-container matColumnDef="action">
-        <th mat-header-cell *matHeaderCellDef> Action </th>
-        <td mat-cell *matCellDef="let element; let i = index;">
-          <button mat-raised-button color="primary" class="push-right"
+        <th mat-header-cell *matHeaderCellDef  > Action </th>
+        <td mat-cell *matCellDef="let element; let i = index;" class="p-0">
+          <button mat-raised-button color="white" class="push-right"
                   [routerLink]="['/edit-user/', element.id]">Edit</button>
-          <button mat-raised-button color="accent" (click)="deleteUser(i, element)">Delete</button>
+          <button mat-raised-button color="white" (click)="deleteUser(i, element)">Delete</button>
         </td>
       </ng-container>
 
