Add-user component, insert success

--- a/src/app/components/list-user/list-user.component.html
+++ b/src/app/components/list-user/list-user.component.html
@@ -37,4 +37,6 @@
 
     <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
   </div>
+  <button mat-raised-button color="white" class="push-right"
+          [routerLink]="['/add-user/']">New user</button>
 </div>
