--- a/src/app/components/edit-user/edit-user.component.html
+++ b/src/app/components/edit-user/edit-user.component.html
@@ -8,7 +8,7 @@
            <mat-form-field class="example-full-width">
           <input matInput placeholder="Name" formControlName="name">
           <mat-error *ngIf="handleError('name', 'required')">
-            You must provide a<strong>user name</strong>
+            You must provide a<strong> user name.</strong>
           </mat-error>
         </mat-form-field>
 
@@ -18,7 +18,7 @@
           <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
           <mat-datepicker #picker></mat-datepicker>
           <mat-error *ngIf="handleError('birthdate', 'required')">
-            Date of birth is required
+            Date of birth is required.
           </mat-error>
         </mat-form-field>
       <div class="full-wrapper button-wrapper">
