--- a/src/app/components/list-user/list-user.component.html
+++ b/src/app/components/list-user/list-user.component.html
@@ -1,24 +1,20 @@
-<div class="title-group">
-  <h1 class="mat-h1 text-center p-4">Users</h1>
-</div>
 
 <p *ngIf="userData.length <= 0" class="no-data">There is no users.</p>
-
-<div class="container" *ngIf="userData.length > 0">
+<div class="container">
   <div class="mat-elevation-z8">
-    <table class="m-0 w-100"mat-table [dataSource]="dataSource">
+    <table mat-table  [dataSource]="dataSource" matSort class="m-0 w-100" >
       <ng-container class="mr-2 ml-2 p-4" matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef> Id </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Id </th>
         <td mat-cell *matCellDef="let element"> {{element.id}} </td>
       </ng-container>
 
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> Name </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
         <td mat-cell *matCellDef="let element"> {{element.name}} </td>
       </ng-container>
 
       <ng-container matColumnDef="birthdate">
-        <th mat-header-cell *matHeaderCellDef> Birthdate </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Birthdate </th>
         <td mat-cell *matCellDef="let element"> {{element.birthdate}} </td>
       </ng-container>
 
