--- a/src/app/components/list-user/list-user.component.html
+++ b/src/app/components/list-user/list-user.component.html
@@ -15,7 +15,7 @@
 
       <ng-container matColumnDef="birthdate">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Birthdate </th>
-        <td mat-cell *matCellDef="let element"> {{element.birthdate}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.birthdate | date: 'dd-MM-yyyy'}} </td>
       </ng-container>
 
       <ng-container matColumnDef="action">
