Format date issue timezone solved

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<mat-toolbar color="primary" class=" mat-elevation-z6">
-  <h1>
+<mat-toolbar color="primary" class="mat-elevation-z8 d-flex justify-content-between ">
+  <h1 class="p-3">
     {{ title }}
   </h1>
 </mat-toolbar>
