--- a/src/app/components/list-user/list-user.component.sass
+++ b/src/app/components/list-user/list-user.component.sass
@@ -1,2 +1,15 @@
 mat-toolbar
   background: white
+
+@media only screen and (max-width: 320px)
+  button
+    font-size: 8pt
+
+@media only screen and (min-width: 321px) and (max-width: 1023px)
+  button
+    font-size: 10pt
+
+@media only screen and (min-width: 1024px)
+  button
+    font-size: 12pt
+
